<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NetworkErrorActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <TextView
        android:id="@+id/title_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_title_error"
        android:textColor="@color/app_content_color"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/network_info_error"
        android:textColor="@color/rv_content_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/start_guideline"
        app:layout_constraintTop_toBottomOf="@+id/title_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/intro_primary_variant"
        android:paddingVertical="12dp"
        android:text="@string/update"
        android:textColor="@color/app_content_color"
        android:textSize="16sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_finish_app"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_finish_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/network_finish_app"
        android:textColor="@color/intro_secondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline"
        app:layout_constraintStart_toStartOf="@+id/start_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>