<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.HomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/vg_city_hour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal_1"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_2"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@id/guideline_horizontal">

        <TextView
            android:id="@+id/tv_city_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunit_sans_light"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_hour_day_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textSize="14sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/iv_weather"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/weather"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_2"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_2"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_loading"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="32dp"
        android:scaleType="center"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_variant"
        android:contentDescription="@string/places_try_again"
        android:fontFamily="@font/nunit_sans_light"
        android:text="@string/try_again"
        android:textColor="@color/app_content_color"
        android:textSize="14sp"
        app:cornerRadius="4dp"
        app:layout_constraintBottom_toTopOf="@+id/vg_info_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_2"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vg_below_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_2"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal_2">

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunit_sans_light"
            android:textAlignment="textStart"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/vg_below_image" />

        <TextView
            android:id="@+id/tv_grau"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_semibold"
            android:text="@string/celsius"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@id/tv_temperature"
            app:layout_constraintTop_toTopOf="@id/vg_below_image" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_sans_semibold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_temperature"
            app:layout_constraintStart_toStartOf="@+id/tv_temperature"
            app:layout_constraintTop_toBottomOf="@id/tv_temperature" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/vg_info_weather"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/info_weather_background"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_4"
        app:layout_constraintCircleRadius="16dp"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical_2"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_3">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/group1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/group2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_humidity"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/humidity"
                android:padding="12dp"
                android:src="@drawable/ic_humidity" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/text_humidity_default"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/group2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/group3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/group1"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_visibility"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/cd_visibility"
                android:padding="12dp"
                android:src="@drawable/ic_visibility" />

            <TextView
                android:id="@+id/tv_visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/text_visibility_default"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/group3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/group2"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_wind_speed"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/wind_speed"
                android:padding="12dp"
                android:src="@drawable/ic_wind" />

            <TextView
                android:id="@+id/tv_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_bold"
                android:text="@string/text_wind_speed_default"
                android:textSize="14sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_rv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/title_rv_home"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_forecast_weather"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_rv_description" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_rv_loading"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:scaleType="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/vg_info_weather" />

</androidx.constraintlayout.widget.ConstraintLayout>