<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/backgroundCentral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bk_textfield_intro_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical2"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical1"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_search_auto_complete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/search"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/text_field_search_city"
            style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/intro_initial_hint"
            android:maxLines="1"
            android:paddingHorizontal="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_state_auto_complete"
            app:layout_constraintStart_toEndOf="@+id/iv_search_auto_complete"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/iv_state_auto_complete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/statetext"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/btn_previous"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#00FFFFFF"
        android:clickable="true"
        app:cardCornerRadius="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp">

        <ImageView
            android:id="@+id/iv_previous_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_intro_back_button" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>